--- a/index.html
+++ b/index.html
@@ -9,6 +9,17 @@
     <link rel="shortcut icon" href="image/praise logo.webp" type="image/x-icon">
 
 </head>
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-EDL1B0VQ8T"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-EDL1B0VQ8T');
+</script>
+
 <body>
     <header>
 
@@ -295,7 +306,7 @@
                 <h3>locations</h3>
                 <a href="#">USA</a>
                 <a href="#">France</a>
-                <a href="#">india</a>
+                <a href="#">Poland</a>
                 <a href="#">China</a>
             </div>
 
